--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ subprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://kotlin.bintray.com/kotlinx"
+        }
     }
 
     apply plugin: 'com.diffplug.spotless'
